--- a/packages/calcite-components/src/components/autocomplete-item/autocomplete-item.scss
+++ b/packages/calcite-components/src/components/autocomplete-item/autocomplete-item.scss
@@ -11,22 +11,22 @@
 
 .scale--s {
   @apply text-n2h;
-  --calcite-autocomplete-item-spacing-unit-l: theme("spacing.2");
-  --calcite-autocomplete-item-spacing-unit-s: theme("spacing.1");
+  --calcite-internal-autocomplete-item-spacing-unit-l: theme("spacing.2");
+  --calcite-internal-autocomplete-item-spacing-unit-s: theme("spacing.1");
   --calcite-internal-autocomplete-item-description-font-size: var(--calcite-font-size-xs);
 }
 
 .scale--m {
   @apply text-n1h;
-  --calcite-autocomplete-item-spacing-unit-l: theme("spacing.3");
-  --calcite-autocomplete-item-spacing-unit-s: theme("spacing[1.5]");
+  --calcite-internal-autocomplete-item-spacing-unit-l: theme("spacing.3");
+  --calcite-internal-autocomplete-item-spacing-unit-s: theme("spacing[1.5]");
   --calcite-internal-autocomplete-item-description-font-size: var(--calcite-font-size-sm);
 }
 
 .scale--l {
   @apply text-0h;
-  --calcite-autocomplete-item-spacing-unit-l: theme("spacing.4");
-  --calcite-autocomplete-item-spacing-unit-s: theme("spacing[2.5]");
+  --calcite-internal-autocomplete-item-spacing-unit-l: theme("spacing.4");
+  --calcite-internal-autocomplete-item-spacing-unit-s: theme("spacing[2.5]");
   --calcite-internal-autocomplete-item-description-font-size: var(--calcite-font-size);
 }
 
@@ -45,9 +45,9 @@
     items-center;
   background-color: var(--calcite-autocomplete-background-color, var(--calcite-color-foreground-1));
   color: var(--calcite-autocomplete-text-color, var(--calcite-color-text-3));
-  gap: var(--calcite-autocomplete-item-spacing-unit-l);
-  padding-inline: var(--calcite-autocomplete-item-spacing-unit-l);
-  padding-block: var(--calcite-autocomplete-item-spacing-unit-s);
+  gap: var(--calcite-internal-autocomplete-item-spacing-unit-l);
+  padding-inline: var(--calcite-internal-autocomplete-item-spacing-unit-l);
+  padding-block: var(--calcite-internal-autocomplete-item-spacing-unit-s);
   @include word-break();
   justify-content: space-around;
 }
